+ Added keys being dropped back into the game... because apparently that feature disappeared somewhere.
+ Added player hunger to world save.
- Removed the "home" functionality.
* Changed beds in multiplayer, so that all players must be sleeping before the game speeds up.
* Fixed score mode in multiplayer


Minicraft+ version 2.0.3

+ Added support for dedicated servers! With a CLI OS, meaning an OS without a GUI. This allows for more compatibility, not to mention more resources being able to be devoted to the game.
+ Added various server options, and a command help system, for dedicated servers.
+ Added feature to save the last ip address you entered when trying to join a multiplayer server
+ Added more error messages when connecting
* Fixed item entity spawn positions and going through other tiles
+ Added the ability to drop an item to the ground with Q and shift-Q (shift-q drops the whole stack)
+ made it so you can transfer single items to and from chests, with the drop key.
* Fixed bugs with creative inventory, so it always has all items.
* Fixed issues with the pickup control in single player and multiplayer
+ Created an account system! you must now register on the playminicraft site to use multiplayer. Comes with offline mode.
* Fixed multiplayer client saving with the account system.
+ added an fps limiter
* Made various optimizations to the code
+ Added back and fixed knockbacks, after removing them since they didn't work how I wanted.
+ Allowed torches to be placed on obsidian bricks


Minicraft+ version 2.0.2

* Switched the multiplayer protocol from UDP to TCP.
* fixed problems with doors, floors, and walls (item drops, etc.)
+ made TNT light other TNT
* edited coal drop amount
* made lots of edits to mob spawn rate, and mob count management
+ Made it so all mobs (not players obviously) despawn after a certain amount of time (will later be fixed so mobs close to the player don't despawn.
+ Made enchanter craftable.